--- a/a_la_francaise.html
+++ b/a_la_francaise.html
@@ -33,8 +33,11 @@
                         <h3>Tartare de poulpe acidulé</h3>
                         <p>Aux zests d'orange</p>
                     </div>
-                    <p>25€</p>
-                    <i class="fas fa-check-circle"></i>
+                    <p class="prix">25€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
+                    
                 </div>
                 </a>
                 <a href="#">
@@ -43,7 +46,10 @@
                         <h3>Velouté de légumes d'antan</h3>
                         <p>Carotte, panais, topinambour</p>
                     </div>
-                    <p>35€</p>
+                    <p class="prix">35€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -52,7 +58,10 @@
                         <h3>Soupe à l'oignon</h3>
                         <p>Revisitée</p>
                     </div>
-                    <p>20€</p>
+                    <p class="prix">20€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
             </div>
@@ -64,7 +73,10 @@
                         <h3>Coquilles Saint-Jacques</h3>
                         <p>Accompagnées d'une purée de panais</p>
                     </div>
-                    <p>40€</p>
+                    <p class="prix">40€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -73,7 +85,10 @@
                         <h3>Magret de canard</h3>
                         <p>Et parmentier de pommes de terres</p>
                     </div>
-                    <p>35€</p>
+                    <p class="prix">35€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -82,7 +97,10 @@
                         <h3>Pigeonneau d'Illes-et-Vilaine</h3>
                         <p>Sur son lit de gnocchis aux légumes</p>
                     </div>
-                    <p>44€</p>
+                    <p class="prix">44€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
             </div>
@@ -94,7 +112,10 @@
                         <h3>Pétales de violettes glacés</h3>
                         <p>Et purée de noisettes</p>
                     </div>
-                        <p>18€</p>
+                        <p class="prix">18€</p>
+                        <div class="menu__plat--coche">
+                            <i class="test fas fa-check-circle"></i>
+                        </div>
                 </div>
                 </a>
                 <a href="#">
@@ -103,7 +124,10 @@
                         <h3>Fondant au chocolat</h3>
                         <p>Revisité</p>
                     </div>
-                    <p>22€</p>
+                    <p class="prix">22€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -112,7 +136,10 @@
                         <h3>Millefeuille croustillant</h3>
                         <p>myrtilles et pâtes d'amande</p>
                     </div>
-                    <p>23€</p>
+                    <p class="prix">23€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
             </div>
