--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="header__slogan">
                 <h2>Réservez le menu qui vous convient</h2>
                 <p>Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
-                <a href="#restaurants" class="header__slogan--explore">Explorer nos restaurants</a>
+                <a href="#restaurants" id="explore" class="header__slogan--explore">Explorer nos restaurants</a>
             </div>
             <nav class="nav">
                 <h2>Fonctionnement</h2>
