--- a/la_note_enchante.html
+++ b/la_note_enchante.html
@@ -33,7 +33,10 @@
                         <h3>Ravioles de foie gras</h3>
                         <p>Accompagnés de leur crème à la truffe</p>
                     </div>
-                    <p>25€</p>
+                    <p class="prix">25€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -42,7 +45,10 @@
                         <h3>Caviar osciètre</h3>
                         <p>Sur blini à la farine de blé noir</p>
                     </div>
-                    <p>35€</p>
+                    <p class="prix">35€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -51,7 +57,10 @@
                         <h3>Homard et espuma de potiron</h3>
                         <p>Mariné aux zestes d'orange</p>
                     </div>
-                    <p>20€</p>
+                    <p class="prix">20€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -60,7 +69,10 @@
                             <h3>Foie gras de canard cuit entier</h3>
                             <p>Confiture de figue et pain toasté</p>
                         </div>
-                        <p>35€</p>
+                        <p class="prix">35€</p>
+                        <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                     </div>
                     </a>
             </div>
@@ -72,7 +84,10 @@
                         <h3>Noix de coquilles Saint-Jacques</h3>
                         <p>Sur lit de purée de céleri-rave</p>
                     </div>
-                    <p>40€</p>
+                    <p class="prix">40€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -81,7 +96,10 @@
                         <h3>Langoustine poêlée</h3>
                         <p>Purée de patate douce</p>
                     </div>
-                    <p>35€</p>
+                    <p class="prix">35€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -90,7 +108,10 @@
                         <h3>Mijoté de queue de boeuf</h3>
                         <p>Et riz sauvage aux zestes de citron</p>
                     </div>
-                    <p>44€</p>
+                    <p class="prix">44€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
             </div>
@@ -102,7 +123,10 @@
                         <h3>Macaron noisette et chocolat</h3>
                         <p>Glace au caramel brun et sel de Guérande</p>
                     </div>
-                        <p>18€</p>
+                        <p class="prix">18€</p>
+                        <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -111,7 +135,10 @@
                         <h3>Baba au rhum revisité</h3>
                         <p>Avec son coulis de citron</p>
                     </div>
-                    <p>22€</p>
+                    <p class="prix">22€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -120,7 +147,10 @@
                         <h3>Tarte au citron meringuée</h3>
                         <p>Déstructurée</p>
                     </div>
-                    <p>23€</p>
+                    <p class="prix">23€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
             </div>
