--- a/la_palette_du_gout.html
+++ b/la_palette_du_gout.html
@@ -32,7 +32,10 @@
                         <h3>Fricassée d'escargot</h3>
                         <p>Au piment d'Espelette</p>
                     </div>
-                    <p>25€</p>
+                    <p class="prix">25€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -41,7 +44,10 @@
                         <h3>Foie gras de canard mi-cuit</h3>
                         <p>Et ses copeaux de truffe noire</p>
                     </div>
-                    <p>35€</p>
+                    <p class="prix">35€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -50,7 +56,10 @@
                         <h3>Oeuf au plat</h3>
                         <p>Assaisonné à la truffe sur lit de caviar</p>
                     </div>
-                    <p>20€</p>
+                    <p class="prix">20€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
             </div>
@@ -62,7 +71,10 @@
                         <h3>Filet de boeuf aux herbes</h3>
                         <p>Accompagné de sa ribambelle de légumes</p>
                     </div>
-                    <p>40€</p>
+                    <p class="prix">40€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -71,7 +83,10 @@
                         <h3>Parmentier de queue de boeuf</h3>
                         <p>À la truffe noire sur sa purée de panais</p>
                     </div>
-                    <p>35€</p>
+                    <p class="prix">35€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -80,7 +95,10 @@
                         <h3>Filet de turbot</h3>
                         <p>Aux agrumes</p>
                     </div>
-                    <p>44€</p>
+                    <p class="prix">44€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
             </div>
@@ -92,7 +110,10 @@
                         <h3>Paris-Brest</h3>
                         <p>Revisité</p>
                     </div>
-                        <p>18€</p>
+                        <p class="prix">18€</p>
+                        <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -101,7 +122,10 @@
                         <h3>Macaron au chocolat d'exception</h3>
                         <p>Et glace à la vanille de Madagascar</p>
                     </div>
-                    <p>22€</p>
+                    <p class="prix">22€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -110,7 +134,10 @@
                         <h3>Mousse au chocolat</h3>
                         <p>Au piment d'Espelette et à la truffe noire</p>
                     </div>
-                    <p>23€</p>
+                    <p class="prix">23€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
             </div>
