--- a/le_delice_des_sens.html
+++ b/le_delice_des_sens.html
@@ -20,7 +20,7 @@
         <img src="./assets/img/deliceDesSens.jpg" alt="Plat aux délices de sens">
         <div class="section__hors-img">
             <div class="section__titre">
-                <h1>À la française</h1>
+                <h1>Le délices des sens</h1>
                 <i class="card__text--vide far fa-heart"></i>
                 <i class="card__text--plein fas fa-heart"></i>
             </div>
@@ -32,7 +32,10 @@
                         <h3>Tartare de thon</h3>
                         <p>Assaisonné au yuzu</p>
                     </div>
-                    <p>25€</p>
+                    <p class="prix">25€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -41,7 +44,10 @@
                         <h3>Bouchée de homard croustillant </h3>
                         <p>Et sa farandole de petits légumes</p>
                     </div>
-                    <p>35€</p>
+                    <p class="prix">35€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -50,7 +56,10 @@
                         <h3>Velouté de cèpes </h3>
                         <p>Aux truffes</p>
                     </div>
-                    <p>20€</p>
+                    <p class="prix">20€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
             </div>
@@ -62,7 +71,10 @@
                         <h3>Poulet rôti aux herbes de Provence </h3>
                         <p>Et sa crème de truffe</p>
                     </div>
-                    <p>40€</p>
+                    <p class="prix">40€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -71,7 +83,10 @@
                         <h3>Langouste rôtie</h3>
                         <p>Et ses légumes de saison</p>
                     </div>
-                    <p>35€</p>
+                    <p class="prix">35€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -80,7 +95,10 @@
                         <h3>Côte de boeuf Angus</h3>
                         <p>Et sa purée de panais</p>
                     </div>
-                    <p>44€</p>
+                    <p class="prix">44€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
             </div>
@@ -92,7 +110,10 @@
                         <h3>Farandole de desserts</h3>
                         <p>Du chef</p>
                     </div>
-                        <p>18€</p>
+                        <p class="prix">18€</p>
+                        <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -101,7 +122,10 @@
                         <h3>Crème brulée</h3>
                         <p>Revisitée</p>
                     </div>
-                    <p>22€</p>
+                    <p class="prix">22€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
                 <a href="#">
@@ -110,7 +134,10 @@
                         <h3>Tiramisu </h3>
                         <p>À la noisette</p>
                     </div>
-                    <p>23€</p>
+                    <p class="prix">23€</p>
+                    <div class="menu__plat--coche">
+                        <i class="test fas fa-check-circle"></i>
+                    </div>
                 </div>
                 </a>
             </div>
